--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.5.5"
   }
 }
